updated_resume_path

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ nav ul li a:hover {
                 <p>DevOps Engineer | QA & Automation</p>
                 <p>Email: <a href="mailto:ashsivu567@gmail.com">ashsivu567@gmail.com</a></p>
                 <p>Location: Chennai, Tamil Nadu</p>
-                <p><a href="resume.pdf" download><i class="fas fa-file-pdf"></i> Download Resume</a></p>
+                <p><a href="resume/resume.pdf" download><i class="fas fa-download"></i> Download Resume</a></p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/ashwin-siva-8a012b212" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
@@ -264,7 +264,7 @@ nav ul li a:hover {
     
     <section id="resume">
         <h2><u>Resume</u></h2>
-        <a href="resume.pdf" download><i class="fas fa-file-pdf"></i> Download Resume</a>
+        <a href="resume/resume.pdf" download><i class="fas fa-file-pdf"></i> Download Resume</a>
     </section>
     
     <footer>
