--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ nav ul li a:hover {
             <img src="images/profile-img.jpg" class="profile-img" alt="Profile Image">
             <div class="profile-info">
                 <h2><u>Ashwin V</u></h2>
-                <p>DevOps Engineer | QA & Automation</p>
+                <p>DevOps Engineer | QA & Automation Engineer</p>
                 <p>Email: <a href="mailto:ashsivu567@gmail.com">ashsivu567@gmail.com</a></p>
                 <p>Location: Chennai, Tamil Nadu</p>
                 <p><a href="resume/resume.pdf" download><i class="fas fa-download"></i> Download Resume</a></p>
